created profile heading component

--- a/index.html
+++ b/index.html
@@ -16,7 +16,27 @@
     <title>Frontend Mentor | Time tracking dashboard</title>
   </head>
   <body>
-    Report for Jeremy Robson Daily Weekly Monthly Work 5hrs
+    <main class="container">
+      <div class="profile">
+        <div class="profile-header">
+          <img
+            class="avatar"
+            src="images/image-jeremy.png"
+            alt="avatar of Jeremy"
+          />
+          <div class="profile-text">
+            <p>Report for</p>
+            <h1>Jeremy Robson</h1>
+          </div>
+        </div>
+        <ul class="report-toggle-container">
+          <li class="toggle">Daily</li>
+          <li class="toggle" aria-selected="true">Weekly</li>
+          <li class="toggle">Monthly</li>
+        </ul>
+      </div>
+    </main>
+    Work 5hrs
     <!-- daily -->
     Previous - 7hrs
     <!-- daily -->
@@ -91,7 +111,6 @@
     <!-- weekly -->
     7hrs
     <!-- monthly -->
-    Previous - 11hrs
-    <!-- monthly -->
+    Previous - 11hrs monthly
   </body>
 </html>
