--- a/index.html
+++ b/index.html
@@ -35,82 +35,123 @@
           <li class="toggle">Monthly</li>
         </ul>
       </div>
+
+      <!-- Work Card -->
+      <div class="card">
+        <div class="background orange-bg">
+          <img class="icon" src="images/icon-work.svg" alt="icon" />
+        </div>
+        <div class="content">
+          <div class="content-header">
+            <h2>Work</h2>
+            <button class="btn">
+              <img src="images/icon-ellipsis.svg" alt="button" />
+            </button>
+          </div>
+          <div class="data-content">
+            <h3 class="hours">5hrs</h3>
+            <p class="previous">Previous - 7hrs</p>
+          </div>
+        </div>
+      </div>
+      <!-- Play Card -->
+      <div class="card">
+        <div class="background blue-bg">
+          <img class="icon" src="images/icon-play.svg" alt="icon" />
+        </div>
+        <div class="content">
+          <div class="content-header">
+            <h2>Play</h2>
+            <button class="btn">
+              <img src="images/icon-ellipsis.svg" alt="button" />
+            </button>
+          </div>
+          <div class="data-content">
+            <h3 class="hours">1hr</h3>
+            <p class="previous">Previous - 2hrs</p>
+          </div>
+        </div>
+      </div>
+      <!-- Study Card -->
+      <div class="card">
+        <div class="background pink-bg">
+          <img class="icon" src="images/icon-study.svg" alt="icon" />
+        </div>
+        <div class="content">
+          <div class="content-header">
+            <h2>Study</h2>
+            <button class="btn">
+              <img src="images/icon-ellipsis.svg" alt="button" />
+            </button>
+          </div>
+          <div class="data-content">
+            <h3 class="hours">0hrs</h3>
+            <p class="previous">Previous - 1hr</p>
+          </div>
+        </div>
+      </div>
+      <!-- Exercise Card -->
+      <div class="card">
+        <div class="background green-bg">
+          <img
+            class="icon icon-small"
+            src="images/icon-exercise.svg"
+            alt="icon"
+          />
+        </div>
+        <div class="content">
+          <div class="content-header">
+            <h2>Exercise</h2>
+            <button class="btn">
+              <img src="images/icon-ellipsis.svg" alt="button" />
+            </button>
+          </div>
+          <div class="data-content">
+            <h3 class="hours">1hr</h3>
+            <p class="previous">Previous - 1hr</p>
+          </div>
+        </div>
+      </div>
+      <!-- Social Card -->
+      <div class="card">
+        <div class="background purple-bg">
+          <img class="icon" src="images/icon-social.svg" alt="icon" />
+        </div>
+        <div class="content">
+          <div class="content-header">
+            <h2>Social</h2>
+            <button class="btn">
+              <img src="images/icon-ellipsis.svg" alt="button" />
+            </button>
+          </div>
+          <div class="data-content">
+            <h3 class="hours">1hr</h3>
+            <p class="previous">Previous - 3hrs</p>
+          </div>
+        </div>
+      </div>
+      <!-- Self Care -->
+      <div class="card">
+        <div class="background yellow-bg">
+          <img
+            class="icon icon-small"
+            src="images/icon-self-care.svg"
+            alt="icon"
+          />
+        </div>
+        <div class="content">
+          <div class="content-header">
+            <h2>Social</h2>
+            <button class="btn">
+              <img src="images/icon-ellipsis.svg" alt="button" />
+            </button>
+          </div>
+          <div class="data-content">
+            <h3 class="hours">1hr</h3>
+            <p class="previous">Previous - 3hrs</p>
+          </div>
+        </div>
+      </div>
     </main>
-    Work 5hrs
-    <!-- daily -->
-    Previous - 7hrs
-    <!-- daily -->
-    32hrs
-    <!-- weekly -->
-    Previous - 36hrs
-    <!-- weekly -->
-    103hrs
-    <!-- monthly -->
-    Previous - 128hrs
-    <!-- monthly -->
-
-    Play 1hr
-    <!-- daily -->
-    Previous - 2hrs
-    <!-- daily -->
-    10hrs
-    <!-- weekly -->
-    Previous - 8hrs
-    <!-- weekly -->
-    23hrs
-    <!-- monthly -->
-    Previous - 29hrs
-    <!-- monthly -->
-
-    Study 0hrs
-    <!-- daily -->
-    Previous - 1hr
-    <!-- daily -->
-    4hrs
-    <!-- weekly -->
-    Previous - 7hrs
-    <!-- weekly -->
-    13hrs
-    <!-- monthly -->
-    Previous - 19hrs
-    <!-- monthly -->
-
-    Exercise 1hr
-    <!-- daily -->
-    Previous - 1hr
-    <!-- daily -->
-    4hrs
-    <!-- weekly -->
-    Previous - 5hrs
-    <!-- weekly -->
-    11hrs
-    <!-- monthly -->
-    Previous - 18hrs
-    <!-- monthly -->
-
-    Social 1hr
-    <!-- daily -->
-    Previous - 3hrs
-    <!-- daily -->
-    5hrs
-    <!-- weekly -->
-    Previous - 10hrs
-    <!-- weekly -->
-    21hrs
-    <!-- monthly -->
-    Previous - 23hrs
-    <!-- monthly -->
-
-    Self Care 0hrs
-    <!-- daily -->
-    Previous - 1hr
-    <!-- daily -->
-    2hrs
-    <!-- weekly -->
-    Previous - 2hrs
-    <!-- weekly -->
-    7hrs
-    <!-- monthly -->
-    Previous - 11hrs monthly
   </body>
 </html>
