created get data function to retrieve specific data from json file and make it responsive

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
           </div>
         </div>
         <ul class="report-toggle-container">
-          <li class="toggle">Daily</li>
-          <li class="toggle" aria-selected="true">Weekly</li>
-          <li class="toggle">Monthly</li>
+          <li class="selection-toggle" id="daily">Daily</li>
+          <li class="selection-toggle" id="weekly" aria-selected="true">
+            Weekly
+          </li>
+          <li class="selection-toggle" id="monthly">Monthly</li>
         </ul>
       </div>
 
@@ -153,5 +155,7 @@
         </div>
       </div>
     </main>
+
+    <script src="index.js"></script>
   </body>
 </html>
