--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <img src="images/icon-ellipsis.svg" alt="button" />
             </button>
           </div>
-          <div class="data-content">
+          <div class="data-content" id="Work">
             <h3 class="hours">5hrs</h3>
             <p class="previous">Previous - 7hrs</p>
           </div>
@@ -68,7 +68,7 @@
               <img src="images/icon-ellipsis.svg" alt="button" />
             </button>
           </div>
-          <div class="data-content">
+          <div class="data-content" id="Play">
             <h3 class="hours">1hr</h3>
             <p class="previous">Previous - 2hrs</p>
           </div>
@@ -86,7 +86,7 @@
               <img src="images/icon-ellipsis.svg" alt="button" />
             </button>
           </div>
-          <div class="data-content">
+          <div class="data-content" id="Study">
             <h3 class="hours">0hrs</h3>
             <p class="previous">Previous - 1hr</p>
           </div>
@@ -108,7 +108,7 @@
               <img src="images/icon-ellipsis.svg" alt="button" />
             </button>
           </div>
-          <div class="data-content">
+          <div class="data-content" id="Exercise">
             <h3 class="hours">1hr</h3>
             <p class="previous">Previous - 1hr</p>
           </div>
@@ -126,7 +126,7 @@
               <img src="images/icon-ellipsis.svg" alt="button" />
             </button>
           </div>
-          <div class="data-content">
+          <div class="data-content" id="Social">
             <h3 class="hours">1hr</h3>
             <p class="previous">Previous - 3hrs</p>
           </div>
@@ -148,7 +148,7 @@
               <img src="images/icon-ellipsis.svg" alt="button" />
             </button>
           </div>
-          <div class="data-content">
+          <div class="data-content" id="Self-care">
             <h3 class="hours">1hr</h3>
             <p class="previous">Previous - 3hrs</p>
           </div>
