removed unused html content

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             </button>
           </div>
           <div class="data-content" id="Work">
-            <h3 class="hours">5hrs</h3>
-            <p class="previous">Previous - 7hrs</p>
+            <h3 class="hours"></h3>
+            <p class="previous"></p>
           </div>
         </div>
       </div>
@@ -69,8 +69,8 @@
             </button>
           </div>
           <div class="data-content" id="Play">
-            <h3 class="hours">1hr</h3>
-            <p class="previous">Previous - 2hrs</p>
+            <h3 class="hours"></h3>
+            <p class="previous"></p>
           </div>
         </div>
       </div>
@@ -87,8 +87,8 @@
             </button>
           </div>
           <div class="data-content" id="Study">
-            <h3 class="hours">0hrs</h3>
-            <p class="previous">Previous - 1hr</p>
+            <h3 class="hours"></h3>
+            <p class="previous"></p>
           </div>
         </div>
       </div>
@@ -109,8 +109,8 @@
             </button>
           </div>
           <div class="data-content" id="Exercise">
-            <h3 class="hours">1hr</h3>
-            <p class="previous">Previous - 1hr</p>
+            <h3 class="hours"></h3>
+            <p class="previous"></p>
           </div>
         </div>
       </div>
@@ -127,8 +127,8 @@
             </button>
           </div>
           <div class="data-content" id="Social">
-            <h3 class="hours">1hr</h3>
-            <p class="previous">Previous - 3hrs</p>
+            <h3 class="hours"></h3>
+            <p class="previous"></p>
           </div>
         </div>
       </div>
@@ -149,8 +149,8 @@
             </button>
           </div>
           <div class="data-content" id="Self-care">
-            <h3 class="hours">1hr</h3>
-            <p class="previous">Previous - 3hrs</p>
+            <h3 class="hours"></h3>
+            <p class="previous"></p>
           </div>
         </div>
       </div>
