made displayData function cleaner

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="content">
           <div class="content-header">
-            <h2>Work</h2>
+            <h2 class="content-heading">Work</h2>
             <button class="btn">
               <img src="images/icon-ellipsis.svg" alt="button" />
             </button>
@@ -63,7 +63,7 @@
         </div>
         <div class="content">
           <div class="content-header">
-            <h2>Play</h2>
+            <h2 class="content-heading">Play</h2>
             <button class="btn">
               <img src="images/icon-ellipsis.svg" alt="button" />
             </button>
@@ -81,7 +81,7 @@
         </div>
         <div class="content">
           <div class="content-header">
-            <h2>Study</h2>
+            <h2 class="content-heading">Study</h2>
             <button class="btn">
               <img src="images/icon-ellipsis.svg" alt="button" />
             </button>
@@ -103,7 +103,7 @@
         </div>
         <div class="content">
           <div class="content-header">
-            <h2>Exercise</h2>
+            <h2 class="content-heading">Exercise</h2>
             <button class="btn">
               <img src="images/icon-ellipsis.svg" alt="button" />
             </button>
@@ -121,7 +121,7 @@
         </div>
         <div class="content">
           <div class="content-header">
-            <h2>Social</h2>
+            <h2 class="content-heading">Social</h2>
             <button class="btn">
               <img src="images/icon-ellipsis.svg" alt="button" />
             </button>
@@ -143,7 +143,7 @@
         </div>
         <div class="content">
           <div class="content-header">
-            <h2>Social</h2>
+            <h2 class="content-heading">Social</h2>
             <button class="btn">
               <img src="images/icon-ellipsis.svg" alt="button" />
             </button>
